[수정] .loginform 선택자 gap 속성 fix

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -55,7 +55,7 @@ main {
     display: flex;
     flex-direction: column;
     width: 640px;
-    gap: 16px;
+    gap: 24px;
 }
 
 .loginform label {
